[gd_scene load_steps=5 format=3 uid="uid://b7bq80rl31wbi"]

[ext_resource type="Script" path="res://ui/ui_first_setup/ui-first-setup.gd" id="1_2ntop"]
[ext_resource type="Script" path="res://ui/ui_first_setup/signals-ui-first-setup.gd" id="2_phqke"]
[ext_resource type="Script" path="res://addons/gdtemplate/ui/ui_button_cycle/ui-button-cycle.gd" id="3_8nsus"]
[ext_resource type="Script" path="res://ui/ui_settings/ui_hslider_volume/ui-hslider-volume.gd" id="3_bftde"]

[node name="UIFirstSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ntop")

[node name="Signals" type="Node" parent="."]
script = ExtResource("2_phqke")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SCFirstSetup" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBCFirstSetup" type="VBoxContainer" parent="Panel/SCFirstSetup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HBCLanguages" type="HBoxContainer" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCLanguages"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCLanguages"]
layout_mode = 2
text = "ui_label_language"

[node name="OptionButtonLanguage" type="OptionButton" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCLanguages"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBCFont/ButtonCycleFont")
focus_next = NodePath("../../HBCFont/ButtonCycleFont")
focus_previous = NodePath("../../ButtonCompleteSetup")

[node name="VSeparator2" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCLanguages"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBCFont" type="HBoxContainer" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFont"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFont"]
layout_mode = 2
text = "ui_label_font"

[node name="Label" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFont"]
layout_mode = 2
text = "←"

[node name="ButtonCycleFont" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFont"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBCLanguages/OptionButtonLanguage")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBCFontSize/ButtonToggleFontSize")
focus_previous = NodePath("../../HBCLanguages/OptionButtonLanguage")
script = ExtResource("3_8nsus")

[node name="Label2" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFont"]
layout_mode = 2
text = "→"

[node name="VSeparator4" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFont"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBCFontSize" type="HBoxContainer" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize"]
layout_mode = 2
text = "ui_label_font_size"

[node name="HSeparator5" type="HSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SpinBoxFontSize" type="SpinBox" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize"]
layout_mode = 2
editable = false

[node name="ButtonToggleFontSize" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBCFont/ButtonCycleFont")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../CheckButtonMute")
focus_next = NodePath("../../CheckButtonMute")
focus_previous = NodePath("../../HBCFont/ButtonCycleFont")
toggle_mode = true
text = "ui_button_edit"

[node name="HSeparator4" type="HSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="CheckButtonMute" type="CheckButton" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBCFontSize/ButtonToggleFontSize")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../HBCVolumeSFX/HSliderVolumeSFX")
focus_next = NodePath("../HBCVolumeSFX/HSliderVolumeSFX")
focus_previous = NodePath("../HBCFontSize/ButtonToggleFontSize")
text = "ui_label_start_muted"

[node name="HBCVolumeSFX" type="HBoxContainer" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCVolumeSFX"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCVolumeSFX"]
layout_mode = 2
text = "ui_label_vol_sfx"

[node name="VSeparator3" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCVolumeSFX"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HSliderVolumeSFX" type="HSlider" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCVolumeSFX"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../CheckButtonMute")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../CheckButtonFullscreen")
focus_next = NodePath("../../CheckButtonFullscreen")
focus_previous = NodePath("../../CheckButtonMute")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("3_bftde")
BUS_ID = 3

[node name="VSeparator2" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCVolumeSFX"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="CheckButtonFullscreen" type="CheckButton" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBCVolumeSFX/HSliderVolumeSFX")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../HBCWindowScale/ButtonWindowScaleUp")
focus_next = NodePath("../HBCWindowScale/ButtonWindowScaleDown")
focus_previous = NodePath("../HBCVolumeSFX/HSliderVolumeSFX")
text = "ui_label_fullscreen"

[node name="HBCWindowScale" type="HBoxContainer" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale"]
layout_mode = 2
size_flags_horizontal = 3
text = "ui_label_window_scale"

[node name="ButtonWindowScaleDown" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../CheckButtonFullscreen")
focus_neighbor_right = NodePath("../ButtonWindowScaleUp")
focus_neighbor_bottom = NodePath("../../HBCGameScale/ButtonGameScaleDown")
focus_next = NodePath("../ButtonWindowScaleUp")
focus_previous = NodePath("../../CheckButtonFullscreen")
text = " - "

[node name="LabelWindowScale" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale"]
layout_mode = 2

[node name="ButtonWindowScaleUp" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale"]
layout_mode = 2
focus_neighbor_left = NodePath("../ButtonWindowScaleDown")
focus_neighbor_top = NodePath("../../CheckButtonFullscreen")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBCGameScale/ButtonGameScaleUp")
focus_next = NodePath("../../HBCGameScale/ButtonGameScaleDown")
focus_previous = NodePath("../ButtonWindowScaleDown")
text = " + "

[node name="VSeparator2" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBCGameScale" type="HBoxContainer" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale"]
layout_mode = 2
size_flags_horizontal = 3
text = "ui_label_game_scale"

[node name="ButtonGameScaleDown" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBCWindowScale/ButtonWindowScaleDown")
focus_neighbor_right = NodePath("../ButtonGameScaleUp")
focus_neighbor_bottom = NodePath("../../ButtonCompleteSetup")
focus_next = NodePath("../ButtonGameScaleUp")
focus_previous = NodePath("../../HBCWindowScale/ButtonWindowScaleUp")
text = " - "

[node name="LabelGameScale" type="Label" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale"]
layout_mode = 2

[node name="ButtonGameScaleUp" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale"]
layout_mode = 2
focus_neighbor_left = NodePath("../ButtonGameScaleDown")
focus_neighbor_top = NodePath("../../HBCWindowScale/ButtonWindowScaleUp")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../ButtonCompleteSetup")
focus_next = NodePath("../../ButtonCompleteSetup")
focus_previous = NodePath("../ButtonGameScaleDown")
text = " + "

[node name="VSeparator2" type="VSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/SCFirstSetup/VBCFirstSetup"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonCompleteSetup" type="Button" parent="Panel/SCFirstSetup/VBCFirstSetup"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../HBCGameScale/ButtonGameScaleUp")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../HBCLanguages/OptionButtonLanguage")
focus_previous = NodePath("../HBCGameScale/ButtonGameScaleUp")
text = "Play"

[connection signal="item_selected" from="Panel/SCFirstSetup/VBCFirstSetup/HBCLanguages/OptionButtonLanguage" to="Signals" method="_on_option_button_language_item_selected"]
[connection signal="new_index" from="Panel/SCFirstSetup/VBCFirstSetup/HBCFont/ButtonCycleFont" to="Signals" method="_on_button_cycle_font_new_index"]
[connection signal="focus_entered" from="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize/SpinBoxFontSize" to="Signals" method="_on_spin_box_font_size_focus_entered"]
[connection signal="toggled" from="Panel/SCFirstSetup/VBCFirstSetup/HBCFontSize/ButtonToggleFontSize" to="Signals" method="_on_button_toggle_font_size_toggled"]
[connection signal="toggled" from="Panel/SCFirstSetup/VBCFirstSetup/CheckButtonMute" to="Signals" method="_on_check_button_mute_toggled"]
[connection signal="toggled" from="Panel/SCFirstSetup/VBCFirstSetup/CheckButtonFullscreen" to="Signals" method="_on_check_button_fullscreen_toggled"]
[connection signal="pressed" from="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale/ButtonWindowScaleDown" to="Signals" method="_on_button_window_scale_down_pressed"]
[connection signal="pressed" from="Panel/SCFirstSetup/VBCFirstSetup/HBCWindowScale/ButtonWindowScaleUp" to="Signals" method="_on_button_window_scale_up_pressed"]
[connection signal="pressed" from="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale/ButtonGameScaleDown" to="Signals" method="_on_button_game_scale_down_pressed"]
[connection signal="pressed" from="Panel/SCFirstSetup/VBCFirstSetup/HBCGameScale/ButtonGameScaleUp" to="Signals" method="_on_button_game_scale_up_pressed"]
[connection signal="pressed" from="Panel/SCFirstSetup/VBCFirstSetup/ButtonCompleteSetup" to="Signals" method="_on_button_complete_setup_pressed"]
